deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  namespace: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: 919287165203.dkr.ecr.ap-south-1.amazonaws.com/app1:${BUILD_NUMBER}
          ports:
            - containerPort: 3000
